# raytracer

./: CMakeLists.txt  README.md  raytracer.h
debug/: CMakeLists.txt
geometry/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
raytracer/: CMakeLists.txt  raytracer.h
reader/: CMakeLists.txt  light.h  object.h  scene.h
